--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "cookie-parser": "^1.4.1",
     "ejs": "^2.3.4",
     "express": "^4.13.4",
+    "instagram-node": "^0.5.8",
+    "instagram-node-lib": "^0.1.1",
     "merge-descriptors": "^1.0.1",
     "method-override": "^2.3.5",
     "morgan": "^1.6.1",
-    "request": "^2.69.0"
+    "request": "^2.69.0",
+    "twitter": "^1.7.0"
   }
 }
